<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".presentation.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/connection_status"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/connectionStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/disconnected_state"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_marginTop="10dp"
        app:dividerColor="@color/dividerColor"
        app:dividerInsetEnd="10dp"
        app:dividerInsetStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connectionStatusTextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/macAddressLayout"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:hint="@string/mac_address"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@android:color/darker_gray"
        app:boxBackgroundColor="@color/backgroundColor"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintBottom_toTopOf="@id/usernameLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/macAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textUri"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="@color/backgroundColor"
        app:boxStrokeColor="@android:color/darker_gray"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/macAddressLayout"
        app:layout_constraintBottom_toTopOf="@id/characteristicLayout"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textUri"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/characteristicLayout"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:hint="@string/characteristic"
        android:textColorHint="@color/black"
        app:boxStrokeColor="@android:color/darker_gray"
        app:boxBackgroundColor="@color/backgroundColor"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usernameLayout"
        app:layout_constraintBottom_toTopOf="@id/connectBtn"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/characteristicEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/connectBtn"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/connect"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:cornerRadius="6.5dp"
        app:rippleColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/disconnectBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/characteristicLayout"
        app:shapeAppearance="?attr/shapeAppearanceCornerSmall" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/disconnectBtn"
        android:layout_width="@dimen/_260sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/disconnect"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:cornerRadius="6.5dp"
        app:rippleColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connectBtn"
        app:shapeAppearance="?attr/shapeAppearanceCornerSmall" />



</androidx.constraintlayout.widget.ConstraintLayout>